# KDTree

./: CMakeLists.txt  KDTree.cpp  KDTree.hpp  README.md
input/: cs_pair.txt  curved_surface.stl  curved_surface_volume.stl  curved_surface_volume_scaled.stl
tests/: CMakeLists.txt  construction_time.cpp  generate_input.cpp  plot.py  plot_drawing.py  read_mesh.cpp
